[package]
name = "monitor"
version = "0.1.0"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.1"
failure = "0.1.5"
colored = "1.8.0"
serde = {version="1.0.94", features=["derive"]}
sysinfo = "0.9.0"
indoc = "0.3.3"
